--- a/ProcentApp2.0/ProcentApp2.0/View/MainPage.xaml
+++ b/ProcentApp2.0/ProcentApp2.0/View/MainPage.xaml
@@ -39,23 +39,23 @@
                     <TextBox Text="{Binding Procent, UpdateSourceTrigger=PropertyChanged}" PreviewTextInput="TextBox_PreviewTextInput2"/>
                 </DockPanel>
                 <DockPanel>
-                    <Label Width="200" Content="Дата"/>
-                    <DatePicker Text="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}" x:Name="datepick" FontSize="16" Margin="0,0,5,0"/>
+                    <Label Width="200" Content="Дата окончания"/>
+                    <DatePicker Text="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}" SelectedDate="{Binding EndDate, UpdateSourceTrigger=PropertyChanged}" x:Name="datepick" FontSize="16" Margin="0,0,5,0"/>
                 </DockPanel>
                 <DockPanel>
-                    <Label Width="200" Content="Суммировать"/>
-                    <TextBox Text="{Binding Summarize, Mode=OneWay}" PreviewTextInput="TextBox_PreviewTextInput"/>
+                    <Label Width="200" Content="Реинвестировать"/>
+                    <TextBox Text="{Binding Summarize, UpdateSourceTrigger=PropertyChanged}" PreviewTextInput="TextBox_PreviewTextInput"/>
                 </DockPanel>
                 <DockPanel>
                     <Label Width="200" Content="Докладывать"/>
-                    <TextBox Text="{Binding PutOff, Mode=OneWay}" PreviewTextInput="TextBox_PreviewTextInput"/>
+                    <TextBox Text="{Binding PutOff, UpdateSourceTrigger=PropertyChanged}" PreviewTextInput="TextBox_PreviewTextInput"/>
                 </DockPanel>
-                <Button Command="{Binding SumCommand}" Margin="0,10,0,0" FontSize="16" Content="Вычислить" Width="200" Height="40" ></Button>
+                <Button Command="{Binding SumCommand}" Margin="0,10,0,0" FontSize="20" Content="Посчитать" Width="200" Height="40" ></Button>
             </StackPanel>
         </Grid>
         <Grid Background="Gray" Grid.Row="1">
             <StackPanel VerticalAlignment="Center">
-                <Label HorizontalContentAlignment="Center" Content="Дата отправки 9 июля 2019г" Foreground="White"/>
+                <Label HorizontalContentAlignment="Center" Content="{Binding text}" Foreground="White"/>
                 <Label x:Name="dateexp" HorizontalContentAlignment="Center" Foreground="White"/>
                 <Label x:Name="dmbtimelb" HorizontalContentAlignment="Center" Foreground="White"/>
             </StackPanel>
